crates/pgls_pretty_print/tests/snapshots/multi/tests__hash_part_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/hash_part.sql
snapshot_kind: text
---
CREATE TABLE mchash (
  a INT,
  b TEXT,
  c JSONB
)
PARTITION BY HASH(a part_test_int4_ops,
b part_test_text_ops);

CREATE TABLE mchash1
PARTITION OF mchash
FOR VALUES WITH (MODULUS 4, REMAINDER 0);

SELECT satisfies_hash_partition(0, 4, 0, NULL);

SELECT satisfies_hash_partition(CAST('tenk1' AS REGCLASS), 4, 0, NULL);

SELECT satisfies_hash_partition(CAST('mchash1' AS REGCLASS), 4, 0, NULL);

SELECT satisfies_hash_partition(CAST('mchash' AS REGCLASS), 0, 0, NULL);

SELECT satisfies_hash_partition(CAST('mchash' AS REGCLASS), 1, -1, NULL);

SELECT satisfies_hash_partition(CAST('mchash' AS REGCLASS), 1, 1, NULL);

SELECT satisfies_hash_partition(CAST('mchash' AS REGCLASS), NULL, 0, NULL);

SELECT satisfies_hash_partition(CAST('mchash' AS REGCLASS), 4, NULL, NULL);

SELECT
  satisfies_hash_partition(
    CAST('mchash' AS REGCLASS),
    4,
    0,
    CAST(NULL AS INT),
    CAST(NULL AS TEXT),
    CAST(NULL AS JSON)
  );

SELECT
  satisfies_hash_partition(
    CAST('mchash' AS REGCLASS),
    3,
    1,
    CAST(NULL AS INT)
  );

SELECT
  satisfies_hash_partition(
    CAST('mchash' AS REGCLASS),
    2,
    1,
    CAST(NULL AS INT),
    CAST(NULL AS INT)
  );

SELECT
  satisfies_hash_partition(
    CAST('mchash' AS REGCLASS),
    4,
    0,
    0,
    CAST('' AS TEXT)
  );

SELECT
  satisfies_hash_partition(
    CAST('mchash' AS REGCLASS),
    4,
    0,
    2,
    CAST('' AS TEXT)
  );

SELECT
  satisfies_hash_partition(
    CAST('mchash' AS REGCLASS),
    2,
    1,
    VARIADIC CAST(ARRAY[1, 2] AS INT[])
  );

CREATE TABLE mcinthash (
  a INT,
  b INT,
  c JSONB
)
PARTITION BY HASH(a part_test_int4_ops,
b part_test_int4_ops);

SELECT
  satisfies_hash_partition(
    CAST('mcinthash' AS REGCLASS),
    4,
    0,
    VARIADIC ARRAY[0, 0]
  );

SELECT
  satisfies_hash_partition(
    CAST('mcinthash' AS REGCLASS),
    4,
    0,
    VARIADIC ARRAY[0, 1]
  );

SELECT
  satisfies_hash_partition(
    CAST('mcinthash' AS REGCLASS),
    4,
    0,
    VARIADIC CAST(ARRAY[] AS INT[])
  );

SELECT
  satisfies_hash_partition(
    CAST('mcinthash' AS REGCLASS),
    4,
    0,
    VARIADIC ARRAY[NOW(), NOW()]
  );

CREATE TABLE text_hashp (a TEXT)
PARTITION BY HASH(a);

CREATE TABLE text_hashp0
PARTITION OF text_hashp
FOR VALUES WITH (MODULUS 2, REMAINDER 0);

CREATE TABLE text_hashp1
PARTITION OF text_hashp
FOR VALUES WITH (MODULUS 2, REMAINDER 1);

SELECT
  satisfies_hash_partition(
    CAST('text_hashp' AS REGCLASS),
    2,
    0,
    CAST('xxx' AS TEXT)
  ) OR
  satisfies_hash_partition(
    CAST('text_hashp' AS REGCLASS),
    2,
    1,
    CAST('xxx' AS TEXT)
  )
  AS satisfies;

DROP TABLE "mchash";

DROP TABLE "mcinthash";

DROP TABLE "text_hashp";
